# triton-beginner-guide

./: .gitignore  Makefile  README.md  client.py  config.pbtxt  train.py
c++/: CMakeLists.txt  Makefile  client.cpp
elastic_example/: config.pbtxt
python/: Makefile  inference_sample.json  init.sh  train.py
